--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -34,7 +34,23 @@ spec:
       cpu: 400m
       memory: 768Mi
   vault:
-    enabled: false
+    enabled: true
+    paths:
+      - kvPath: /azuread/data/prod/creds/spinnsyn-backend
+        mountPath: /secrets/azuread/spinnsyn-backend
+      - kvPath: serviceuser/data/prod/srvspinnsyn
+        mountPath: /secrets/serviceuser
+      - kvPath: /kv/prod/fss/spinnsyn-backend/default
+        mountPath: /var/run/secrets/nais.io/vault
   ingresses:
     - "https://spinnsyn-backend.nais.adeo.no"
   webproxy: true
+  env:
+    - name: KAFKA_BOOTSTRAP_SERVERS_URL
+      value: SASL_SSL://a01apvl00145.adeo.no:8443,SASL_SSL://a01apvl00146.adeo.no:8443,SASL_SSL://a01apvl00147.adeo.no:8443,SASL_SSL://a01apvl00149.adeo.no:8443
+    - name: SPINNSYN_BACKEND_DB_URL
+      value: jdbc:postgresql://A01DBVL013.adeo.no:5432/spinnsyn-backend
+    - name: MOUNT_PATH_VAULT
+      value: /postgresql/prod-fss
+    - name: UTBETALING_KAFKA_TOPIC
+      value: NOT-DEFINED-YET
