--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-fss
-          RESOURCE: naiserator-dev.yaml
+          RESOURCE: naiserator-prod.yaml
       - name: Create release
         uses: actions/create-release@v1
         env:
