--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,10 +117,10 @@ jobs:
           tag_name: ${{ env.VERSION }}
           release_name: ${{ env.VERSION }}
       
- tag-image-as-latest:
+  tag-image-as-latest:
     name: Tag dockerimage as latest
     runs-on: ubuntu-latest
-    needs: build-and-publish
+    needs: build
     steps:
       - name: Download VERSION-artifact
         uses: actions/download-artifact@v2
