--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
           path: .
       - name: Set environment variables
         run: |
-          echo "::set-env name=VERSION::"$(cat VERSION.txt)""
+          echo "::set-env name=VERSION::"`cat VERSION.txt`""
           echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
       - name: Deploy to dev-fss
         uses: nais/deploy/actions/deploy@master
@@ -101,7 +101,7 @@ jobs:
           path: .
       - name: Set environment variables
         run: |
-          echo "::set-env name=VERSION::"$(cat VERSION.txt)""
+          echo "::set-env name=VERSION::"`cat VERSION.txt`""
           echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
       - name: Deploy to dev-fss
         uses: nais/deploy/actions/deploy@master
@@ -129,7 +129,7 @@ jobs:
           path: .
       - name: Set environment variables
         run: |
-          echo "::set-env name=VERSION::"$(cat VERSION.txt)""
+          echo "::set-env name=VERSION::"`cat VERSION.txt`""
           echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
           echo "::set-env name=LATEST::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:latest""
       - name: Tag and push docker image
