Set env på separate steg

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,10 +75,8 @@ jobs:
         with:
           name: VERSION.txt
           path: .
-      - name: Set environment variables
-        run: |
-          echo "::set-env name=VERSION::"`cat VERSION.txt`""
-          echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
+      - run: echo "::set-env name=VERSION::"`cat VERSION.txt`""
+      - run: echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
       - name: Deploy to dev-fss
         uses: nais/deploy/actions/deploy@master
         env:
@@ -99,10 +97,8 @@ jobs:
         with:
           name: VERSION.txt
           path: .
-      - name: Set environment variables
-        run: |
-          echo "::set-env name=VERSION::"`cat VERSION.txt`""
-          echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
+      - run: echo "::set-env name=VERSION::"`cat VERSION.txt`""
+      - run: echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
       - name: Deploy to dev-fss
         uses: nais/deploy/actions/deploy@master
         env:
@@ -127,11 +123,9 @@ jobs:
         with:
           name: VERSION.txt
           path: .
-      - name: Set environment variables
-        run: |
-          echo "::set-env name=VERSION::"`cat VERSION.txt`""
-          echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
-          echo "::set-env name=LATEST::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:latest""
+      - run: echo "::set-env name=VERSION::"`cat VERSION.txt`""
+      - run: echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
+      - run: echo "::set-env name=LATEST::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:latest""
       - name: Tag and push docker image
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
