--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,7 @@ jobs:
           docker push ${IMAGE}
 
   deploy-to-dev:
+    if: github.ref == 'refs/heads/ikke-deploy-før-db-og-kafka-stemmer'
     name: Deploy to dev-fss
     runs-on: ubuntu-latest
     needs: build
@@ -85,7 +86,7 @@ jobs:
           RESOURCE: naiserator-dev.yaml
 
   deploy-to-prod:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master-ikke-deploy-før-db-og-kafka-stemmer'
     name: Deploy to prod-fss
     runs-on: ubuntu-latest
     needs: build
@@ -112,7 +113,7 @@ jobs:
         with:
           tag_name: ${{ env.VERSION }}
           release_name: ${{ env.VERSION }}
-      
+
   tag-image-as-latest:
     name: Tag dockerimage as latest
     runs-on: ubuntu-latest
