--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,5 @@
 name: "Build, publish and deploy"
-on:
-  push:
-    branches:
-      - master
+on: push
 env:
   APP: spinnsyn-backend
 jobs:
@@ -13,7 +10,7 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v1
         with:
-          java-version: '12.0.2'
+          java-version: '14'
       - name: Checkout code
         uses: actions/checkout@master
       - name: Generate version and image name
