Legger til ktlint som linter i gradle

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./gradlew lintKotlin
+          ./gradlew ktlintCheck
       - name: Run tests
         env:
           ORG_GRADLE_PROJECT_githubUser: x-access-token
