--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,6 +118,7 @@ jobs:
           release_name: ${{ env.VERSION }}
 
   tag-image-as-latest:
+    if: github.ref == 'refs/heads/master'
     name: Tag dockerimage as latest
     runs-on: ubuntu-latest
     needs: build
