--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -52,3 +52,5 @@ spec:
       value: jdbc:postgresql://A01DBVL013.adeo.no:5432/spinnsyn-backend
     - name: MOUNT_PATH_VAULT
       value: /postgresql/prod-fss
+    - name: SPVEDTAK_FRONTEND_URL
+      value: "https://fix-meg-når-prod-satt-opp"
