--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -1,10 +1,10 @@
 apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
-  name: spinnsyn-backend
+  name: spinnsynbackend
   namespace: default
   labels:
-    team: teamsykefravr
+    team: flex
 spec:
   image: {{ image }}
   replicas:
@@ -33,24 +33,13 @@ spec:
     requests:
       cpu: 400m
       memory: 768Mi
-  vault:
-    enabled: true
-    paths:
-      - kvPath: /azuread/data/dev/creds/spinnsyn-backend
-        mountPath: /secrets/azuread/spinnsyn-backend
-      - kvPath: serviceuser/data/dev/srvspinnsyn
-        mountPath: /secrets/serviceuser
-      - kvPath: /kv/preprod/fss/spinnsyn-backend/default
-        mountPath: /var/run/secrets/nais.io/vault
-  ingresses:
-    - "https://spinnsyn-backend.nais.preprod.local"
-  webproxy: true
+  gcp:
+    sqlInstances:
+      - type: POSTGRES_11
+        databases:
+          - name: spinnsyndb
   env:
     - name: KAFKA_BOOTSTRAP_SERVERS_URL
       value: SSL://b27apvl00045.preprod.local:8443,SSL://b27apvl00046.preprod.local:8443,SSL://b27apvl00047.preprod.local:8443
-    - name: SPINNSYN_BACKEND_DB_URL
-      value: jdbc:postgresql://b27dbvl015.preprod.local:5432/spinnsyn-backend
-    - name: MOUNT_PATH_VAULT
-      value: /postgresql/preprod-fss
     - name: SPVEDTAK_FRONTEND_URL
       value: "https://fix-meg-når-q1-satt-opp"
