--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,8 +67,7 @@ jobs:
           docker push ${IMAGE}
 
   deploy-to-dev:
-    if: github.ref == 'refs/heads/ikke-deploy-før-db-og-kafka-stemmer'
-    name: Deploy to dev-fss
+    name: Deploy to dev-gcp
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -81,11 +80,11 @@ jobs:
           path: .
       - run: echo "::set-env name=VERSION::"`cat VERSION.txt`""
       - run: echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
-      - name: Deploy to dev-fss
+      - name: Deploy to dev-gcp
         uses: nais/deploy/actions/deploy@master
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-fss
+          CLUSTER: dev-gcp
           RESOURCE: naiserator-dev.yaml
 
   deploy-to-prod:
