--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -46,3 +46,7 @@ spec:
       value: SSL://b27apvl00045.preprod.local:8443,SSL://b27apvl00046.preprod.local:8443,SSL://b27apvl00047.preprod.local:8443
     - name: SPVEDTAK_FRONTEND_URL
       value: "https://fix-meg-når-q1-satt-opp"
+    - name: OIDC_WELLKNOWN_URI
+      value: "https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1"
+    - name: LOGINSERVICE_CLIENTID
+      value: "0090b6e1-ffcc-4c37-bc21-049f7d1f0fe5"
