--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -58,3 +58,5 @@ spec:
       value: "https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1"
     - name: LOGINSERVICE_CLIENTID
       value: "0090b6e1-ffcc-4c37-bc21-049f7d1f0fe5"
+    - name: KAFKA_SCHEMA_REGISTRY_URL
+      value: https://kafka-schema-registry.nais-q.adeo.no
