--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,6 +87,28 @@ jobs:
           CLUSTER: dev-gcp
           RESOURCE: naiserator-dev.yaml
 
+  deploy-to-prod:
+    if: github.ref == 'refs/heads/master'
+    name: Deploy to prod-gcp
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+      - name: Download VERSION-artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: VERSION.txt
+          path: .
+      - run: echo "::set-env name=VERSION::"`cat VERSION.txt`""
+      - run: echo "::set-env name=IMAGE::"docker.pkg.github.com/${GITHUB_REPOSITORY}/$APP:$VERSION""
+      - name: Deploy to dev-gcp
+        uses: nais/deploy/actions/deploy@master
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: naiserator-prod.yaml
+
   tag-image-as-latest:
     if: github.ref == 'refs/heads/master'
     name: Tag dockerimage as latest
