--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -23,6 +23,7 @@ spec:
     initialDelay: 30
     periodSeconds: 5
     timeout: 5
+  leaderElection: true
   prometheus:
     enabled: true
     path: /prometheus
@@ -53,7 +54,7 @@ spec:
     - name: KAFKA_BOOTSTRAP_SERVERS_URL
       value: SASL_SSL://a01apvl00145.adeo.no:8443,SASL_SSL://a01apvl00146.adeo.no:8443,SASL_SSL://a01apvl00147.adeo.no:8443,SASL_SSL://a01apvl00149.adeo.no:8443
     - name: SPINNSYN_FRONTEND_URL
-      value: "https://sykepenger.nav.no"
+      value: "https://www.nav.no/syk/sykepenger"
     - name: OIDC_WELLKNOWN_URI
       value: "https://login.microsoftonline.com/navnob2c.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten"
     - name: LOGINSERVICE_CLIENTID
