--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -47,6 +47,7 @@ spec:
     inbound:
       rules:
         - application: spinnsyn-backend-proxy
+        - application: spinnsyn-backend-mock-proxy # Kun i dev-gcp
 
   envFrom:
     - secret: spinnsyn-backend-serviceuser
