Oppdater frontend q url

--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -55,7 +55,7 @@ spec:
     - name: KAFKA_BOOTSTRAP_SERVERS_URL
       value: SSL://b27apvl00045.preprod.local:8443,SSL://b27apvl00046.preprod.local:8443,SSL://b27apvl00047.preprod.local:8443
     - name: SPINNSYN_FRONTEND_URL
-      value: "https://www-q1.dev.nav.no/syk/sykepenger"
+      value: "https://www-gcp.dev.nav.no/syk/sykepenger"
     - name: OIDC_WELLKNOWN_URI
       value: "https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1"
     - name: LOGINSERVICE_CLIENTID
