--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -56,9 +56,9 @@ spec:
       value: SSL://b27apvl00045.preprod.local:8443,SSL://b27apvl00046.preprod.local:8443,SSL://b27apvl00047.preprod.local:8443
     - name: SPINNSYN_FRONTEND_URL
       value: "https://www-gcp.dev.nav.no/syk/sykepenger"
-    - name: OIDC_WELLKNOWN_URI
+    - name: SELVBETJENING_WELLKNOWN_URI
       value: "https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1"
-    - name: LOGINSERVICE_CLIENTID
+    - name: SELVBETJENING_EXPECTED_AUDIENCE
       value: "0090b6e1-ffcc-4c37-bc21-049f7d1f0fe5"
     - name: KAFKA_SCHEMA_REGISTRY_URL
       value: https://kafka-schema-registry.nais-q.adeo.no
