--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -60,5 +60,9 @@ spec:
       value: "https://login.microsoftonline.com/NAVtestB2C.onmicrosoft.com/v2.0/.well-known/openid-configuration?p=B2C_1A_idporten_ver1"
     - name: SELVBETJENING_EXPECTED_AUDIENCE
       value: "0090b6e1-ffcc-4c37-bc21-049f7d1f0fe5"
+    - name: VEILEDER_WELLKNOWN_URI
+      value: "https://login.microsoftonline.com/966ac572-f5b7-4bbe-aa88-c76419c0f851/.well-known/openid-configuration"
+    - name: VEILEDER_EXPECTED_AUDIENCE
+      value: "38e07d31-659d-4595-939a-f18dce3446c5,281ba984-745f-48b8-a79c-9444b8688361"
     - name: KAFKA_SCHEMA_REGISTRY_URL
       value: https://kafka-schema-registry.nais-q.adeo.no
