--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -47,6 +47,7 @@ spec:
     inbound:
       rules:
         - application: spinnsyn-backend-proxy
+        - application: spinnsyn-backend-veileder-proxy
 
   envFrom:
     - secret: spinnsyn-backend-serviceuser
