--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -44,6 +44,7 @@ spec:
     outbound:
       external:
         - host: login.microsoftonline.com
+        - host: kafka-schema-registry.nais-q.adeo.no
     inbound:
       rules:
         - application: spinnsyn-backend-proxy
