Kall syfo tilgangskontroll i fss

--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -8,8 +8,8 @@ metadata:
 spec:
   image: {{ image }}
   replicas:
-    min: 3
-    max: 3
+    min: 2
+    max: 2
     cpuThresholdPercentage: 90
   port: 8080
   liveness:
@@ -45,6 +45,7 @@ spec:
       external:
         - host: login.microsoftonline.com
         - host: kafka-schema-registry.nais-q.adeo.no
+        - host: api-gw-q1.oera.no
     inbound:
       rules:
         - application: spinnsyn-backend-proxy
@@ -53,6 +54,7 @@ spec:
 
   envFrom:
     - secret: spinnsyn-backend-serviceuser
+    - secret: syfo-tilgangskontroll-spinnsyn-backend-api-gw-key
   env:
     - name: KAFKA_BOOTSTRAP_SERVERS_URL
       value: SSL://b27apvl00045.preprod.local:8443,SSL://b27apvl00046.preprod.local:8443,SSL://b27apvl00047.preprod.local:8443
@@ -68,3 +70,5 @@ spec:
       value: "38e07d31-659d-4595-939a-f18dce3446c5,281ba984-745f-48b8-a79c-9444b8688361"
     - name: KAFKA_SCHEMA_REGISTRY_URL
       value: https://kafka-schema-registry.nais-q.adeo.no
+    - name: API_GATEWAY_URL
+      value: https://api-gw-q1.oera.no
