--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
 name: "Build, publish and deploy"
-on: push
+on:
+  push:
+  schedule:
+    - cron:  '20 7 * * *'
 env:
   APP: spinnsyn-backend
 jobs:
