--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
           docker push ${IMAGE}
 
   deploy-to-dev:
+    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/heads/dev-')
     name: Deploy to dev-gcp
     runs-on: ubuntu-latest
     needs: build
