--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -45,7 +45,7 @@ spec:
       external:
         - host: login.microsoftonline.com
         - host: kafka-schema-registry.nais-q.adeo.no
-        - host: api-gw-q1.oera.no
+        - host: syfo-tilgangskontroll.dev-fss-pub.nais.io
         - host: navtestb2c.b2clogin.com
     inbound:
       rules:
@@ -56,7 +56,6 @@ spec:
 
   envFrom:
     - secret: spinnsyn-backend-serviceuser
-    - secret: syfo-tilgangskontroll-spinnsyn-backend-api-gw-key
     - configmap: loginservice-idporten
   env:
     - name: KAFKA_BOOTSTRAP_SERVERS_URL
@@ -69,5 +68,5 @@ spec:
       value: "38e07d31-659d-4595-939a-f18dce3446c5,281ba984-745f-48b8-a79c-9444b8688361"
     - name: KAFKA_SCHEMA_REGISTRY_URL
       value: https://kafka-schema-registry.nais-q.adeo.no
-    - name: API_GATEWAY_URL
-      value: https://api-gw-q1.oera.no
+    - name: SYFOTILGANGSKONTROLL_URL
+      value: https://syfo-tilgangskontroll.dev-fss-pub.nais.io
