Testdata controller for sletting og oppretelse i dev
Co-authored-by: Kent D <kent.daleng@nav.no>
Co-authored-by: Håvard Stigen Andersen <havard.stigen.andersen@nav.no>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,6 +30,7 @@ logging.config: "classpath:logback.xml"
 
 spinnsyn-frontend.url: ${SPINNSYN_FRONTEND_URL}
 syfo-tilgangskontroll.url: ${SYFOTILGANGSKONTROLL_URL}
+nais.cluster: ${NAIS_CLUSTER_NAME}
 
 no.nav.security.jwt:
   issuer:
