--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -13,13 +13,13 @@ spec:
     cpuThresholdPercentage: 90
   port: 8080
   liveness:
-    path: /is_alive
+    path: /internal/health
     initialDelay: 10
     timeout: 5
     periodSeconds: 5
     failureThreshold: 30
   readiness:
-    path: /is_ready
+    path: /internal/health
     initialDelay: 30
     periodSeconds: 5
     timeout: 5
