Mindre datasource pool

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ spring:
     url: "jdbc:postgresql://${NAIS_DATABASE_SPINNSYN_BACKEND_SPINNSYN_DB_HOST}:${NAIS_DATABASE_SPINNSYN_BACKEND_SPINNSYN_DB_PORT}/${NAIS_DATABASE_SPINNSYN_BACKEND_SPINNSYN_DB_DATABASE}"
     username: ${NAIS_DATABASE_SPINNSYN_BACKEND_SPINNSYN_DB_USERNAME}
     password: ${NAIS_DATABASE_SPINNSYN_BACKEND_SPINNSYN_DB_PASSWORD}
+    hikari:
+      minimum-idle: 1
+      maximum-pool-size: 3
 
 on-prem-kafka:
   schema-registry-url: ${KAFKA_SCHEMA_REGISTRY_URL}
