--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
     active: test
   flyway:
     enabled: true
+  datasource:
+    hikari:
+      minimum-idle: 1
+      maximum-pool-size: 3
 
 on-prem-kafka:
   bootstrap-servers: overskrives i AbstractContainerBaseTest
