--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -27,6 +27,13 @@ no.nav.security.jwt:
       discoveryurl: http://localhost:${mock-oauth2-server.port}/veileder/.well-known/openid-configuration
       accepted_audience: veileder-audience
 
+management:
+  endpoint.prometheus.enabled: true
+  endpoints.web:
+    base-path: /internal
+    exposure.include: prometheus
+    path-mapping.prometheus: /prometheus
+
 spinnsyn-frontend.url: blah
 syfotilgangskontroll.url: http://syfotilgangskontroll
 nais.cluster: test
