--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -18,6 +18,10 @@ on-prem-kafka:
   auto-offset-reset: earliest
   schema-registry-url: blah
 
+aiven-kafka:
+  auto-offset-reset: earliest
+  security-protocol: PLAINTEXT
+
 no.nav.security.jwt:
   issuer:
     loginservice:
@@ -37,3 +41,6 @@ management:
 spinnsyn-frontend.url: blah
 syfotilgangskontroll.url: http://syfotilgangskontroll
 nais.cluster: test
+KAFKA_TRUSTSTORE_PATH: /
+KAFKA_CREDSTORE_PASSWORD: /
+KAFKA_KEYSTORE_PATH: /
