--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -47,4 +47,16 @@ no.nav.security.jwt:
     veileder:
       discoveryurl: ${VEILEDER_WELLKNOWN_URI}
       accepted_audience: ${VEILEDER_EXPECTED_AUDIENCE}
-
+    azureator:
+      discoveryurl: ${AZURE_APP_WELL_KNOWN_URL}
+      accepted_audience: ${AZURE_APP_CLIENT_ID}
+  client:
+    registration:
+      onbehalfof-syfotilgangskontroll:
+        token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}
+        grant-type: urn:ietf:params:oauth:grant-type:jwt-bearer
+        scope: api://${SYFOTILGANGSKONTROLL_AAD_CLIENT_ID}/.default
+        authentication:
+          client-id: ${AZURE_APP_CLIENT_ID}
+          client-secret: ${AZURE_APP_CLIENT_SECRET}
+          client-auth-method: client_secret_basic
