--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -53,6 +53,9 @@ spec:
       rules:
         - application: flex-gateway
         - application: flex-intern-gateway
+        - application: syfomodiaperson
+          namespace: teamsykefravr
+          cluster: prod-fss
   azure:
     application:
       enabled: true
