--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -72,4 +72,4 @@ spec:
     - name: SYFOTILGANGSKONTROLL_URL
       value: https://syfo-tilgangskontroll.prod-fss-pub.nais.io
     - name: SYFOTILGANGSKONTROLL_AAD_CLIENT_ID
-      value: "dfaa2699-7390-4459-9cfc-2e8de64dfaf9"
+      value: prod-fss.teamsykefravr.syfo-tilgangskontroll
