--- a/nais/topics/vedtak-status-topic.yaml
+++ b/nais/topics/vedtak-status-topic.yaml
@@ -21,3 +21,6 @@ spec:
     - team: flex
       application: spinnsyn-backend
       access: write
+    - team: flex
+      application: spinnsyn-brukernotifikasjon
+      access: read
