--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v2
         with:
-          distribution: 'zulu'
-          java-version: '14'
+          distribution: 'temurin'
+          java-version: '16'
       - name: Checkout code
         uses: actions/checkout@master
       - name: Generate version and image name
