--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,10 @@
+[*]
+indent_style = space
+
 [*.{kt,kts}]
 indent_size=4
 insert_final_newline=true
 disabled_rules=no-wildcard-imports
+
+[*.yaml]
+indent_size = 2
