--- a/nais/topics/vedtak-status-topic.yaml
+++ b/nais/topics/vedtak-status-topic.yaml
@@ -27,3 +27,6 @@ spec:
     - team: flex
       application: spinnsyn-arkivering
       access: read
+    - team: flex
+      application: flexmember
+      access: write
