--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -35,6 +35,9 @@ no.nav.security.jwt:
     azureator:
       discoveryurl: http://localhost:${mock-oauth2-server.port}/azureator/.well-known/openid-configuration
       accepted_audience: spinnsyn-backend-client-id
+    tokenx:
+      discoveryurl: http://localhost:${mock-oauth2-server.port}/tokenx/.well-known/openid-configuration
+      accepted_audience: spinnsyn-backend-client-id
   client:
     registration:
       onbehalfof-syfotilgangskontroll:
