--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -77,3 +77,7 @@ spec:
       value: https://syfo-tilgangskontroll.prod-fss-pub.nais.io
     - name: SYFOTILGANGSKONTROLL_AAD_CLIENT_ID
       value: prod-fss.teamsykefravr.syfo-tilgangskontroll
+    - name: SPINNSYN_FRONTEND_CLIENT_ID
+      value: prod-gcp:flex:spinnsyn-frontend
+    - name: SPINNSYN_FRONTEND_TOKENX_IDP
+      value: https://oidc.difi.no/idporten-oidc-provider/
