--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -62,3 +62,7 @@ nais.cluster: test
 KAFKA_TRUSTSTORE_PATH: /
 KAFKA_CREDSTORE_PASSWORD: /
 KAFKA_KEYSTORE_PATH: /
+
+
+SPINNSYN_FRONTEND_CLIENT_ID: spinnsyn-frontend
+SPINNSYN_FRONTEND_TOKENX_IDP: idporten
