--- a/naiserator-prod.yaml
+++ b/naiserator-prod.yaml
@@ -9,7 +9,7 @@ spec:
   image: {{ image }}
   replicas:
     min: 2
-    max: 2
+    max: 3
     cpuThresholdPercentage: 90
   port: 8080
   liveness:
@@ -56,6 +56,7 @@ spec:
         - application: flex-gateway
         - application: flex-intern-gateway
         - application: spinnsyn-frontend-arkivering
+        - application: spinnsyn-frontend
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: prod-fss
@@ -76,3 +77,7 @@ spec:
       value: https://syfo-tilgangskontroll.prod-fss-pub.nais.io
     - name: SYFOTILGANGSKONTROLL_AAD_CLIENT_ID
       value: prod-fss.teamsykefravr.syfo-tilgangskontroll
+    - name: SPINNSYN_FRONTEND_CLIENT_ID
+      value: prod-gcp:flex:spinnsyn-frontend
+    - name: SPINNSYN_FRONTEND_TOKENX_IDP
+      value: https://oidc.difi.no/idporten-oidc-provider/
