--- a/naiserator-dev.yaml
+++ b/naiserator-dev.yaml
@@ -41,6 +41,7 @@ spec:
   gcp:
     sqlInstances:
       - type: POSTGRES_11
+        diskAutoresize: true
         databases:
           - name: spinnsyn-db
             diskAutoresize: true
