--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,6 +73,7 @@ jobs:
     name: Deploy to dev-gcp
     runs-on: ubuntu-latest
     needs: build
+    concurrency: deploy-to-dev
     steps:
       - name: Checkout code
         uses: actions/checkout@master
@@ -95,6 +96,7 @@ jobs:
     name: Deploy to prod-gcp
     runs-on: ubuntu-latest
     needs: build
+    concurrency: deploy-to-prod
     steps:
       - name: Checkout code
         uses: actions/checkout@master
